<resources>
    <string name="app_name">Nagoyal Hotel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="login">Login</string>

    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="error_password">Password should more than 6</string>
    <string name="error_password_verify">Verify password fail</string>
    <string name="error_email">Email is not correct format</string>
    <string name="error_phone">Phone is not correct format</string>
    <string name="error_name">Name cannot leave blank</string>
    <string name="logout">Logout</string>
    <string name="update">UPDATE</string>
    <string name="infoSuccessfully">Update your information successfully</string>
    <string name="infoError">Something wrong, please try again !!!</string>
    <string name="title_activity_maps">Map</string>
    <string name="list_hotel">List Hotel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="emailMsg">Send email successfully, check it !!</string>
    <string name="errorMsg">Something wrong, check it again !</string>
    <string name="backToLogin">Back To Login</string>
    <string name="enter_name_hotel_for_search">Enter name hotel for search ...</string>
    <string name="resetTitle">Send Email Reset Password</string>
    <string name="please_wait_msg">Please wait a minute ...</string>
    <string name="loginTitle">Login Progress</string>
    <string name="registerTitle">Register Progress</string>
    <string name="settingProfileTitle">Setting Profile</string>
    <string name="saveBtn">SAVE</string>
    <string name="please_enter_text_search">Please enter any name for search !!!</string>
    <string name="booking">Booking</string>
    <string name="exitMsg">Please click BACK again to exit</string>
</resources>
