<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingTop="@dimen/_10sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/display_image"
                    app:civ_border_width="@dimen/_2sdp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:contentDescription="@string/nav_header_desc"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/_5sdp">
                    <TextView
                        android:id="@+id/display_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/nav_header_vertical_spacing"
                        android:text="@string/nav_header_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/display_email"
                        android:maxLines="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nav_header_subtitle" />



                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_profile"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textSize="@dimen/_10ssp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/white"
                    android:text="Update Profile"
                    android:minHeight="0dp"
                    android:minWidth="0dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logout_button"
                    android:layout_alignParentRight="true"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"

                    android:textSize="@dimen/_10ssp"
                    android:text="@string/logout"
                    android:minHeight="0dp"
                    android:minWidth="0dp"/>

            </RelativeLayout>
        </LinearLayout>


</LinearLayout>
