<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ProfileActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/profile_app_bar"
            layout="@layout/tool_app_bar" />

        <LinearLayout
            android:layout_below="@+id/profile_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_avatar_editProfile"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_25ssp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/imagdetail"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="@dimen/_2sdp" />

            <TextView
                android:id="@+id/tv_nameShow_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:textAllCaps="true"
                android:textSize="28sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_name_editProfile"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_phone_editProfile"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_email_editProfile"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_updateProfile_editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/edit_profile"
                    android:visibility="visible" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
